<resources>
    <string name="app_name">grüpp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="my_groups">My Groups</string>
    <string name="upcoming_event">Upcoming Events</string>
    <string name="notification_menu_item">Notifications</string>
    <string name="signout">Sign Out</string>

    <string name="enter_name">Event Name</string>
    <string name="create_new_event">Create New Event</string>
    <string name="pick_a_date">Add a Date</string>
    <string name="pick_a_time">Add a Time</string>
    <string name="venue_type_choice">Type of Venue</string>
    <string name="restaurant">Restaurant</string>
    <string name="bar">Bar</string>
    <string name="add_group">+ add group</string>
    <string name="add_friends">+ add friends</string>
    <string name="done_creating">Done</string>
    <string name="add_note">+ add note</string>
    <string name="my_prefs">My Preferences</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_contacts">Add Friends</string>
    <string name="edit_preferences">Edit Preferences</string>
    <string name="no_invited_guest">You have not invited any friends</string>
    <string name="calculating">Searching Venues...</string>
    <string name="event_channel_name">Events Notification</string>
    <string name="channel_description">Events Notifications</string>

    <string name="new_event">New Event!</string>

    <string name="image_source">\"Select Image Source\"</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
