<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.c4q.capstone.userinterface.events.createevent.CreateEventTwoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/layout_item_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_group_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_item_margin"
            android:layout_weight="1"
            android:background="@drawable/button_shapes"
            android:text="@string/add_group"
            android:textColor="@color/dark_gray"
            android:tag="add group button"/>
        <Button
            android:id="@+id/add_friends_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_item_margin"
            android:layout_weight="1"
            android:background="@drawable/button_shapes"
            android:text="@string/add_friends"
            android:textColor="@color/dark_gray"
            android:tag="add friends button"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/invite_guests_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Invite guests gragment  goes here"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"/>
    <EditText
        android:id="@+id/add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_shapes"
        android:hint="@string/add_note"
        android:padding="@dimen/layout_padding"
        android:layout_marginVertical="@dimen/layout_item_margin"
        android:imeOptions="actionGo"
        android:visibility="gone"/>


</LinearLayout>
